--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,8 +98,13 @@ h5.card-title.mt-3 {
 span.icon_span {
   width: 75px;
   height: 75px;
-  background: red;
+
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: x-large;
+  border: 1px solid;
 }
 
 /* detils */
@@ -251,6 +256,10 @@ footer {
   opacity: 0.75;
 }
 
+.back-to-top.whats_app {
+  bottom: 80px;
+}
+
 .back-to-top {
   position: fixed;
   bottom: 20px;
@@ -266,6 +275,11 @@ footer {
   text-decoration: none;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .back-to-top:hover {
