--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,7 +320,7 @@ span.text_titel.titel_logo::first-letter {
   bottom: -50px;
   width: 299px;
   height: 299px;
-  background: url(img/pattern-2.png) no-repeat;
+  background: url(../img/pattern-2.png) no-repeat;
 }
 
 .about-section .image-column .inner-column .image img {
@@ -424,4 +424,71 @@ span.text_titel.titel_logo::first-letter {
   width: 40px;
   height: 1px;
   background-color: #bbbbbb;
+}
+
+.video_phot {
+  height: 40vh;
+  background: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(../img/skyhaus-video.jpg);
+  background-size: cover;
+  background-position: center center;
+
+  background-repeat: no-repeat;
+}
+
+.highlight-card {
+  border: none;
+  padding: 30px;
+  margin-bottom: 30px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  height: 100%;
+  background-image: url(../img/cover.jpg);
+  height: 50vh;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  -webkit-border-radius: ;
+  -moz-border-radius: ;
+  -ms-border-radius: ;
+  -o-border-radius: ;
+}
+
+.highlight-card:hover {
+  transform: translateY(-5px);
+}
+
+.section-title {
+  position: relative;
+  margin-bottom: 40px;
+  padding-bottom: 15px;
+}
+
+.section-title:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 3px;
+  background: #007bff;
+}
+
+.divider {
+  height: 1px;
+  background: #eee;
+  margin: 40px 0;
+}
+
+.card_text_blur {
+  background: #ffffffbf;
+  padding: 25px;
+  backdrop-filter: blur(0.75em);
+}
+
+section.about-section.bg_color {
+  background: url(../img/BG-Pattern.svg);
 }
