--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ span.text_titel.titel_logo::first-letter {
 
 .about-section {
   position: relative;
-  padding: 120px 0px;
+  /* padding: 120px 0px; */
 }
 
 .about-section .content-column {
@@ -474,7 +474,7 @@ span.text_titel.titel_logo::first-letter {
   bottom: 0;
   width: 50px;
   height: 3px;
-  background: #007bff;
+  background: #d7a449;
 }
 
 .divider {
