--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -60,6 +60,7 @@ img {
   --box3-color: #e7d1fc;
   --title-icon-color: #fff;
 
+  --color-text: #000000;
   /* ====== Transition ====== */
   --tran-05: all 0.5s ease;
   --tran-03: all 0.3s ease;
@@ -73,8 +74,8 @@ body {
 
 body.dark {
   --primary-color: #3a3b3c;
-  --panel-color: #242526;
-  --text-color: #ccc;
+  --panel-color: #000000be;
+  --text-color: #ffffff;
   --black-light-color: #ccc;
   --border-color: #4d4c4c;
   --toggle-color: #fff;
@@ -82,8 +83,12 @@ body.dark {
   --box2-color: #3a3b3c;
   --box3-color: #3a3b3c;
   --title-icon-color: #ccc;
+  --color-text: #fff;
 }
 
+* {
+  color: var(--color-text) !important ;
+}
 /* === Custom Scroll Bar CSS === */
 ::-webkit-scrollbar {
   width: 8px;
@@ -359,7 +364,7 @@ nav.close ~ .dashboard .top {
   position: relative;
   height: 35px;
   width: 35px;
-  background-color: var(--primary-color);
+  background-color: #4ea3ff;
   border-radius: 6px;
   color: var(--title-icon-color);
   display: flex;
@@ -388,8 +393,8 @@ nav.close ~ .dashboard .top {
   align-items: center;
   border-radius: 12px;
   width: calc(100% / 3 - 15px);
-  padding: 15px 20px;
-  background-color: var(--box1-color);
+  padding: 45px;
+  background-color: #4da3ff;
   transition: var(--tran-05);
 }
 
@@ -402,21 +407,21 @@ nav.close ~ .dashboard .top {
   white-space: nowrap;
   font-size: 18px;
   font-weight: 500;
-  color: var(--text-color);
+  color: black !important;
 }
 
 .boxes .box .number {
   font-size: 40px;
   font-weight: 500;
-  color: var(--text-color);
+  color: black !important;
 }
 
 .boxes .box.box2 {
-  background-color: var(--box2-color);
+  background-color: #ffe6ac;
 }
 
 .boxes .box.box3 {
-  background-color: var(--box3-color);
+  background-color: #e7d1fc;
 }
 
 .activity-data .data {
