--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -799,3 +799,5 @@ section#timeline-container {
 }
 
 /* about us page */ /* about us page */ /* about us page */ /* about us page */ /* about us page */ /* about us page */
+
+/* project detils */
