--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3217,10 +3217,11 @@ body.error404 {
   display: block;
   position: relative;
 }
-.jcf-number input {
+.jcf-number input,input#location {
   padding-left: 55px;
   padding-right: 55px;
   text-align: center;
+  padding: 15px;
 }
 .jcf-number input::-webkit-inner-spin-button,
 .jcf-number input::-webkit-outer-spin-button {
